--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -17,6 +17,9 @@ on:
 # ${{ github.repository }} repository name
 env:
   DOCKER_IMAGE: jamie-holland-imi/gitdocker:latest
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_TAG: ghcr.io/jamie-holland-imi/project-name:latest
 
 jobs:
   build:
@@ -29,7 +32,7 @@ jobs:
       uses: actions/checkout@v3
   
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $DOCKER_IMAGE
+      run: docker build . --file Dockerfile --tag $IMAGE_TAG
     #- name: Build the Docker container
       #run: |
         #docker run --rm docker.io/$DOCKER_IMAGE
@@ -45,7 +48,7 @@ jobs:
   compile:
     runs-on: ubuntu-latest
     container:
-      image: docker.io/jamie-holland-imi/gitdocker:latest
+      image: ghcr.io/jamie-holland-imi/project-name:latest
     permissions:
       packages: write
       contents: read
