--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -30,10 +30,17 @@ jobs:
     steps:
     - name: checkout repository
       uses: actions/checkout@v3
-  
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $IMAGE_TAG
-    - run: docker push $IMAGE_TAG
+      run: |
+        docker build . --file Dockerfile --tag $IMAGE_TAG
+        docker run $IMAGE_TAG
+        docker push $IMAGE_TAG
 
     #- name: Build the Docker container
       #run: |
