--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -55,6 +55,7 @@ jobs:
         #path: "Build/stm32_executable.elf"        
     
   compile:
+    needs: build
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/jamie-holland-imi/project-name:latest
