--- a/.gitignore
+++ b/.gitignore
@@ -40,11 +40,10 @@
 *.pdb
 
 # STM32CubeIDE
-applications/*/targets/STM32/Release/*
-applications/*/targets/STM32/Debug/*
-applications/*/targets/STM32/.mxproject
-applications/*/targets/STM32/.settings/language.settings.xml
-applications/*/targets/STM32/.settings/stm32cubeide.project.prefs
+applications/*/Release/*
+applications/*/Debug/*
+applications/*/Build/*
+applications/*/.settings/*
 docs/build/*
 
 #settings
@@ -58,6 +57,3 @@ Debug/
 debug/
 Release/
 release
-
-Drivers/
-drivers/
