--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -16,10 +16,10 @@ on:
 # IMAGE_TAG must be lowercase
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.event.repository.name }}
+  REPO_NAME: ${{ github.event.repository.name }}
   USER_NAME: ${{ github.actor }}
   VERSION: ${{ github.sha }}
-  IMAGE_TAG: ($(REGISTRY)/$(USER_NAME)/$(IMAGE_NAME):$(VERSION))}
+  IMAGE_TAG: $REGISTRY/$USER_NAME/$REPO_NAME:$VERSION
   #IMAGE_TAG: ghcr.io/jamie-holland-imi/project-name:latest
 
 jobs:
