--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -39,15 +39,15 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build the Docker image
       run: |
-        docker build . --file Dockerfile --tag $IMAGE_TAG
-        docker run $IMAGE_TAG
-        docker push $IMAGE_TAG   
+        docker build . --file Dockerfile --tag ${{env.IMAGE_TAG}}
+        docker run ${{env.IMAGE_TAG}}
+        docker push ${{env.IMAGE_TAG}}
     
   compile:
     needs: build
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/jamie-holland-imi/project-name:latest
+      image: ${{env.IMAGE_TAG}}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
