--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -18,7 +18,7 @@ env:
   REGISTRY: ghcr.io
   REPO_NAME: ${{ github.event.repository.name }}
   USER_NAME: ${{ github.actor }}
-  VERSION: ${{ github.sha }}
+  VERSION: "latest"
   IMAGE_TAG: $REGISTRY/$USER_NAME/$REPO_NAME:$VERSION
   #IMAGE_TAG: ghcr.io/jamie-holland-imi/project-name:latest
 
@@ -57,7 +57,7 @@ jobs:
       - prepare-image
     runs-on: ubuntu-latest
     container:
-      image: ${{ needs.prepare-image.outputs.image }}
+      image: ghcr.io/jamie-holland-imi/project-name:latest
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
