--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -19,7 +19,7 @@ env:
   REPO_NAME: ${{ github.event.repository.name }}
   USER_NAME: ${{ github.actor }}
   VERSION: "latest"
-  IMAGE_TAG: $REGISTRY/$USER_NAME/$REPO_NAME:$VERSION
+  IMAGE_TAG: $REGISTRY"/"$USER_NAME"/"$REPO_NAME":"$VERSION
   #IMAGE_TAG: ghcr.io/jamie-holland-imi/project-name:latest
 
 jobs:
@@ -28,14 +28,13 @@ jobs:
     outputs:
       image: ${{ env.IMAGE_TAG }}
     steps:       
-      - run: echo "null"
+      - run: echo ${{ env.IMAGE_TAG }}
       
   build:
     runs-on: ubuntu-latest
     needs: prepare-image
     permissions:
       packages: write
-      contents: read
     steps:
     - name: checkout repository
       uses: actions/checkout@v3
@@ -57,7 +56,7 @@ jobs:
       - prepare-image
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/jamie-holland-imi/project-name:latest
+      image: ${{ needs.prepare-image.outputs.image }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
