--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -23,16 +23,16 @@ env:
   #IMAGE_TAG: ghcr.io/jamie-holland-imi/project-name:latest
 
 jobs:
-  prepare-image:
+  initialization:
     runs-on: ubuntu-latest
     outputs:
-      image: ${{ env.IMAGE_TAG }}
-    steps:       
-      - run: echo ${{ env.IMAGE_TAG }}
-      
+      image: ${{ steps.set_image.outputs.image }}
+    steps:
+      - id: set_image
+        run: echo "{image}={${{env.IMAGE_TAG}}}" >> $GITHUB_OUTPUT
   build:
     runs-on: ubuntu-latest
-    needs: prepare-image
+    needs: initialization
     permissions:
       packages: write
     steps:
@@ -46,17 +46,17 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build the Docker image
       run: |
-        docker build . --file Dockerfile --tag ${{ needs.prepare-image.outputs.image }}
-        docker run ${{ needs.prepare-image.outputs.image }}
-        docker push ${{ needs.prepare-image.outputs.image }}
+        docker build . --file Dockerfile --tag ${{ needs.initialization.outputs.image }}
+        docker run ${{ needs.initialization.outputs.image }}
+        docker push ${{ needs.initialization.outputs.image }}
     
   compile:
     needs: 
       - build 
-      - prepare-image
+      - initialization
     runs-on: ubuntu-latest
     container:
-      image: ${{env.IMAGE_TAG}}
+      image: ${{ needs.initialization.outputs.image }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
