--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -1,4 +1,4 @@
-name: C CI Docker Makefile
+name: CI CD C Docker Makefile
 
 on:
   push:
@@ -12,8 +12,7 @@ on:
   workflow_dispatch:
   
 # Define the image tag
-# ${{ github.repository }} is the repository name
-# IMAGE_TAG must be lowercase
+# The IMAGE_TAG must be lowercase
 env:
   REGISTRY: ghcr.io
   REPO_NAME: ${{ github.event.repository.name }}
@@ -29,7 +28,8 @@ jobs:
       image: ${{ steps.set_image.outputs.image }}
     steps:
       - id: set_image
-        run: echo "{image}={${{env.IMAGE_TAG}}}" >> $GITHUB_OUTPUT
+        run: echo "{image}=${{env.IMAGE_TAG}}" >> $GITHUB_OUTPUT
+        
   build:
     runs-on: ubuntu-latest
     needs: initialization
