--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -46,9 +46,9 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build the Docker image
       run: |
-        docker build . --file Dockerfile --tag ${{ needs.initialization.outputs.image }}
-        docker run ${{ needs.initialization.outputs.image }}
-        docker push ${{ needs.initialization.outputs.image }}
+        docker build . --file Dockerfile --tag ${{env.IMAGE_TAG}}
+        docker run ${{env.IMAGE_TAG}}
+        docker push ${{env.IMAGE_TAG}}
     
   compile:
     needs: 
