--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -41,23 +41,20 @@ jobs:
         docker run ${{env.IMAGE_TAG}}
         docker push ${{env.IMAGE_TAG}}
 
-  initialization:
-    runs-on: ubuntu-latest    
-    permissions:
-      packages: write
+  job0:
+    runs-on: ubuntu-latest
+    needs: build
     outputs:
-      image: ${{ steps.setimage.outputs.image1 }}
+      image: ${{ steps.set_image.outputs.image }}
     steps:
-      - id: setimage
-        run: echo "image1=${{env.IMAGE_TAG}}" >> $GITHUB_OUTPUT
+      - id: set_image
+        run: echo "::set-output name=image::${{IMAGE_TAG}}"
         
   compile:
-    needs: 
-      - build 
-      - initialization
+    needs: job0
     runs-on: ubuntu-latest
     container:
-      image: ${{ jobs.initialization.outputs.image }}
+      image: ${{ needs.job0.outputs.image }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
