--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -48,7 +48,7 @@ jobs:
       image: ${{ steps.set_image.outputs.image }}
     steps:
       - id: set_image
-        run: echo "::set-output name=image::${{IMAGE_TAG}}"
+        run: echo "::set-output name=image::${{env.IMAGE_TAG}}"
         
   compile:
     needs: job0
