--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -12,14 +12,14 @@ on:
   workflow_dispatch:
   
 # Define the image tag
-# The IMAGE_TAG must be lowercase
+# The IMAGE_TAG must be lowercase the ,, convert to lowercase
 env:
   REGISTRY: ghcr.io
   REPO_NAME: ${{ github.event.repository.name }}
   USER_NAME: ${{ github.actor }}
   VERSION: "latest"
-  IMAGE_TAG: $REGISTRY"/"$USER_NAME"/"$REPO_NAME":"$VERSION
-  #IMAGE_TAG: ghcr.io/jamie-holland-imi/project-name:latest
+  IMAGE_TAG: ${REGISTRY,,}"/"${USER_NAME,,}"/"${REPO_NAME,,}":"${VERSION,,}
+  #example result: IMAGE_TAG: ghcr.io/jamie-holland-imi/project-name:latest
 
 jobs:       
   build:
