--- a/.github/workflows/ci-docker-make.yml
+++ b/.github/workflows/ci-docker-make.yml
@@ -27,7 +27,7 @@ jobs:
       packages: write
     steps:
     - name: checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2.2.0
       with:
@@ -40,7 +40,7 @@ jobs:
         docker run ${{env.IMAGE_TAG}}
         docker push ${{env.IMAGE_TAG}}
 
-  var_init:
+  variable_substitution:
     runs-on: ubuntu-latest
     needs: build
     outputs:
@@ -50,7 +50,7 @@ jobs:
         run: echo "image=${{env.IMAGE_TAG}}" >> $GITHUB_OUTPUT
 
   compile:
-    needs: var_init
+    needs: variable_substitution
     runs-on: ubuntu-latest
     container:
       image: ${{ needs.var_init.outputs.image }}
@@ -61,13 +61,14 @@ jobs:
       packages: write
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         
       - name: Run the Makefile and Build the Project
         run: |
           make
           ls
           pwd
+          
       - name: Publish Artifacts
         uses: actions/upload-artifact@v3.1.2
         with:
@@ -75,5 +76,5 @@ jobs:
           path: |
             ./*.elf
             ./*.hex
-          retention-days: 1
+          retention-days: 7
           if-no-files-found: error
