--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -24,7 +24,12 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest    
+    container:
+      image: ghcr.io/jamie-holland-imi/project-name:latest
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     permissions:
       actions: read
       contents: read
@@ -45,16 +50,8 @@ jobs:
       with:
         languages: ${{ matrix.language }}
         
-    - name: QLBuild
-      uses: docker/login-action@v2.2.0
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Runs the makefile
-      run: |
-        docker run ghcr.io/jamie-holland-imi/project-name:latest
-        make
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v1
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
