--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,14 +1,3 @@
-# For most projects, this workflow file will not need changing; you simply need
-# to commit it to your repository.
-#
-# You may wish to alter this file to override the set of languages analyzed,
-# or to provide custom queries or build logic.
-#
-# ******** NOTE ********
-# We have attempted to detect the languages in your repository. Please check
-# the `language` matrix defined below to confirm you have the correct set of
-# supported CodeQL languages.
-#
 name: "CodeQL"
 
 on:
@@ -19,14 +8,29 @@ on:
     branches:
       - 'main'
   workflow_dispatch:
-
+  
+env:
+  REGISTRY: ghcr.io
+  REPO_NAME: ${{ github.event.repository.name }}
+  USER_NAME: ${{ github.actor }}
+  VERSION: "latest"
+  IMAGE_TAG: ${REGISTRY,,}"/"${USER_NAME,,}"/"${REPO_NAME,,}":"${VERSION,,}
 
 jobs:
+  variable_substitution:
+    runs-on: ubuntu-latest
+    outputs:
+      image: ${{ steps.set_image.outputs.image }}
+    steps:
+      - id: set_image
+        run: echo "image=${{env.IMAGE_TAG}}" >> $GITHUB_OUTPUT
+        
   analyze:
     name: Analyze
     runs-on: ubuntu-latest    
+    needs: variable_substitution
     container:
-      image: ghcr.io/jamie-holland-imi/project-name:latest
+      image: ${{ needs.variable_substitution.outputs.image }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
@@ -51,7 +55,7 @@ jobs:
         languages: ${{ matrix.language }}
         
     - name: Autobuild
-      uses: github/codeql-action/autobuild@v1
+      uses: github/codeql-action/autobuild@v2
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
