--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -57,3 +57,11 @@ jobs:
   
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
+
+    - name: Install ClangFormat
+      run: sudo apt-get install -y clang-format
+
+    - name: Run linters
+      uses: wearerequired/lint-action@v2
+      with:
+        clang_format: true
