--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -39,7 +39,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install ClangFormat
-      run: sudo apt-get install -y clang-format
+      run: apt-get install -y clang-format
 
     - name: Run linters
       uses: wearerequired/lint-action@v2
