--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -41,7 +41,9 @@ jobs:
       run: make
       
     - name: Install ClangFormat
-      run: apt-get install -y clang-format
+      run: |
+        apt-get install -y clang-format
+        git config --global --add safe.directory
 
     - name: Run linters
       uses: wearerequired/lint-action@v2.3.0
