--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -50,4 +50,4 @@ jobs:
       uses: wearerequired/lint-action@v2.3.0
       with:
         clang_format: true
-        path: Core/Src/main.c
+        working-directory:: ./Core/Src/
