--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - 'main'
+# Allows you to run this workflow manually from the Actions tab.
   workflow_dispatch:
   
 env:
@@ -15,7 +16,8 @@ env:
   USER_NAME: ${{ github.actor }}
   VERSION: "latest"
   IMAGE_TAG: ${REGISTRY,,}"/"${USER_NAME,,}"/"${REPO_NAME,,}":"${VERSION,,}
-
+  
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel.
 jobs:
   variable_substitution:
     runs-on: ubuntu-latest
@@ -34,22 +36,45 @@ jobs:
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+    permissions:
+      security-events: write
+      # only required for workflows in private repositories
+      actions: read
+      contents: read
     steps:
+# Checks out your repository under $GITHUB_WORKSPACE, so that your job can access it.
     - name: Checkout repository
       uses: actions/checkout@v3
-
+      
+# Builds your Make project using 'cpptesttrace' to collect input data for code analysis.
+    - name: Build project
+      run: | 
+        cpptesttrace make
+        apt-get install -y clang-format
+        git config --system --add safe.directory '*'
 # Runs code analysis with C/C++test.
-    - name: Run C/C++test
+    - name: Run C test
       uses: parasoft/run-cpptest-action@2.0.1
       with:
         input: build/compile_commands.json
         testConfig: 'builtin://MISRA C 2012'
         compilerConfig: 'clang_10_0'
-      
-#    - name: Install ClangFormat
-#      run: |
-#        apt-get install -y clang-format
-#        git config --system --add safe.directory '*'
+        
+# Uploads analysis results in the SARIF format, so that they are displayed as GitHub code scanning alerts.
+    - name: Upload results (SARIF)
+      if: always()
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: reports/report.sarif
+
+# Uploads an archive that includes all report files (.xml, .html, .sarif).
+    - name: Archive reports
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: CpptestReports
+        path: reports/*.*
+
 #    - name: Run linters
 #      uses: wearerequired/lint-action@v2.3.0
 #      with:
