--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -52,7 +52,8 @@ jobs:
         
     - name: Run C Tests
       uses: parasoft/run-cpptest-action@2.0.1
-
+    
+    - run: mkdir -p reports
     # Uploads analysis results in the SARIF format, so that they are displayed as GitHub code scanning alerts.
     - name: Upload results (SARIF)
       if: always()
