--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -51,9 +51,14 @@ jobs:
 # Builds your Make project using 'cpptesttrace' to collect input data for code analysis.
     - name: Build project
       run: cpptesttrace make
+      
+    # Runs code analysis with C test.
     - name: Run C Tests
       uses: parasoft/run-cpptest-action@2.0.1
-    
+      with:
+        reportFormat: xml,html,custom
+        additionalParams: '-property report.custom.extension=sarif -property report.custom.xsl.file=${PARASOFT_SARIF_XSL}'
+
     # Uploads analysis results in the SARIF format, so that they are displayed as GitHub code scanning alerts.
     - name: Upload results (SARIF)
       if: always()
