--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -50,14 +50,11 @@ jobs:
       
 # Builds your Make project using 'cpptesttrace' to collect input data for code analysis.
     - name: Build project
-      run: cpptesttrace make
+      run: cpptestcli -config "builtin://Recommended Rules" -compiler gcc_4_5 -module . -trace make
       
     # Runs code analysis with C test.
     - name: Run C Tests
       uses: parasoft/run-cpptest-action@2.0.1
-      with:
-        reportFormat: xml,html,custom
-        additionalParams: '-property report.custom.extension=sarif -property report.custom.xsl.file=${PARASOFT_SARIF_XSL}'
 
     # Uploads analysis results in the SARIF format, so that they are displayed as GitHub code scanning alerts.
     - name: Upload results (SARIF)
