--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -55,6 +55,9 @@ jobs:
         name: AppInspectorResults
         path: AppInspectorResults.json
         
+    - name: Install ClangFormat
+      run: apt-get install -y clang-format
+        
     - name: Run linters
       uses: wearerequired/lint-action@v2.3.0
       with:
