--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -57,6 +57,8 @@ jobs:
         
     - name: Install ClangFormat
       run: apt-get install -y clang-format
+
+    - run: git config --global --add safe.directory /__w/projectTutorial/projectTutorial
         
     - name: Run linters
       uses: wearerequired/lint-action@v2.3.0
