--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -53,7 +53,7 @@ jobs:
         languages: ${{ matrix.language }}
         
     - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+      run: make -j$(nproc) HAVE_RULES=yes cppcheck
   
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
