--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -43,49 +43,37 @@ jobs:
       contents: read
     steps:
 # Checks out your repository under $GITHUB_WORKSPACE, so that your job can access it.
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-# CppCheck analysis task
-    - name: cppcheck
-      uses: ./
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        check_library: disable
-        skip_preprocessor: disable
-        enable: all #performance,portability,warning
-        exclude_check: ./__tests__/exclude/
-        inconclusive: disable
-        inline_suppression: disable
-        force_language: c
-        force: enable
-        max_ctu_depth: 12
-        platform: disable
-        #std: c11
-        output_file: ./CppCheckReport.txt
-        other_options: --bug-hunting --verbose --std=c11
-        
-    - uses: actions/upload-artifact@v3
-      with:
-        name: CppCheckReport
-        path: ./CppCheckReport.txt
-# Report generating task
-#    - name: publish report    
-#      uses: mikeal/publish-to-github-action@master
-#      env:
-#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        BRANCH_NAME: 'dev' # your branch name goes here
+  # CppCheck analysis task
+      - name: cppcheck
+        uses: deep5050/cppcheck-action@main
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN}}
           
-#    - name: 'Preparing Cmock -environment'
-#      uses: actions/checkout@v3
-#      with:
-#        repository: ThrowTheSwitch/CMock
-#        
-#    - run: ls
-#    - name: Run Tests
-#      run: |
-#        cd test
-#        rake
-#      working-directory: ./test
+      - uses: actions/upload-artifact@v3
+        with:
+          name: CppCheckReport
+          path: ./CppCheckReport.txt
+        
+  # Report generating task
+  #    - name: publish report    
+  #      uses: mikeal/publish-to-github-action@master
+  #      env:
+  #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #        BRANCH_NAME: 'dev' # your branch name goes here
+            
+  #    - name: 'Preparing Cmock -environment'
+  #      uses: actions/checkout@v3
+  #      with:
+  #        repository: ThrowTheSwitch/CMock
+  #        
+  #    - run: ls
+  #    - name: Run Tests
+  #      run: |
+  #        cd test
+  #        rake
+  #      working-directory: ./test
 
       
